# rename-obsidian-property

./: Cargo.toml  README.md
src/: main.rs
src/utils/: file_utils.rs  mod.rs  obsidian_utils.rs
testfiles/: TEOH 0. Introduction.md  TEOH 1. Nuestro Pesimismo.md  TEOH 1.1 - 1.3 Summary.md  TEOH 1.4 Questions Summary and Discussion.md  TEOH 1.4 Questions.md  TEOH 2. La Debilidad de los Estados Fuertes (I).md  TEOH 2. La Vejez de la Humanidad.md  TEOH 3. La Debilidad de los Gobiernos fuertes (II) o Comiendo Ananás en la Luna.md  TEOH 4. La Revolución Liberal Mundial.md  TEOH 5. La idea de una Historia Universal.md  TEOH Part II - Prompts for active reading.md  TEOH Parte I Una vieja pregunta formulada de nuevo.md  TEOH Reading Prompts for Part II.md
